--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "bootstrap": "^4.3.1",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "font-awesome": "^4.7.0",
